# TCore

./: .env.example  .gitignore  Makefile  TradeCore_design.html  docker-compose.prod.yml  docker-compose.yml  hawkes_ofi_indicator_spec.md
.claude/: settings.local.json
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_watched_symbols.py  003_ohlcv_timeframe.py  004_signals_news_social.py  005_feed_sources.py  006_category_columns.py  007_strategy_asset_type.py  008_hawkes_tick_data.py  009_trade_journal.py  010_event_log.py
backend/app/: config.py  main.py  state.py
backend/app/db/: models.py  session.py
backend/app/routers/: backtest.py  control.py  events.py  hawkes.py  health.py  impact.py  market.py  news.py  paper.py  signals.py  social.py  sources.py  strategy.py  watchlist.py  ws.py
backend/app/scheduler/: jobs.py
backend/app/services/: backtest_runner.py  binanceus_ws.py  claude_auth.py  data_ingestion.py  event_log.py  feedback.py  hawkes_ofi.py  indicator_engine.py  news_aggregator.py  paper_broker.py  risk_guard.py  rule_engine.py  sentiment_agent.py  signal_ensemble.py  social_aggregator.py  stock_feed.py  trader_agent.py  validation.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_aggregator.py  test_backtest.py  test_data_ingestion.py  test_db.py  test_e2e.py  test_event_log.py  test_feedback.py  test_hawkes.py  test_risk_guard.py  test_scaffold.py  test_scheduler.py  test_sentiment_agent.py  test_signal_ensemble.py  test_trader_agent.py  test_validation.py
(+67 files in other folders)
