[project]
name = "tradecore-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "apscheduler>=3.10.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "ccxt>=4.3.0",
    "openbb>=4.2.0",
    "pandas-ta>=0.3.14b0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "anthropic>=0.28.0",
    "quantstats>=0.0.62",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-mock>=3.14.0",
    "anyio[trio]>=4.4.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
